--- a/platforms/android/assets/www/partials/site/detail.html
+++ b/platforms/android/assets/www/partials/site/detail.html
@@ -1,6 +1,6 @@
 
-<div class="row cart">
-    <img class="bh"   ng-src="img/{{site.couv}}">  </img>
+<div class="row tile">
+    <img class="couv"   ng-src="img/{{site.couv}}">  </img>
     <div class="col-xs-12">
         <h3 align="center" ng-bind-html="site.name"> </h3> <br> <br> <br> <br> <br>
         
