--- a/www/partials/site/detail.html
+++ b/www/partials/site/detail.html
@@ -27,6 +27,9 @@
     </h4>
 </div>
 
-<h3> Plan du site:  <button type="button" class="btn btn-default" > Go <i class="fa fa-car"></i>!<span></button> </h3>
-<google-map center="map.center" zoom="map.zoom"></google-map>
+<br>
+<google-map center="map.center" zoom="map.zoom">
+<markers idKey='sector.id' coords='sector.coords'>
+    </markers>
+</google-map>
 
