--- a/platforms/android/assets/www/partials/site/sector.html
+++ b/platforms/android/assets/www/partials/site/sector.html
@@ -1,20 +1,14 @@
-<nav class="navbar navbar-fixed-top">
-    <div class="container">
-        <div class="navbar-header">
-            <a ng-click="back(site.id)" class="navbar-brand"><i class="fa fa-angle-left"></i></a>
-            
-            <div class="navbar-brand styled">
-                <select ng-model="mySector" ng-options="sector.id for sector in sectors">
-                    <option value="">-- choose color --</option>
-                </select>
-            </div>
-            
-            <a href="map.html" class="navbar-brand pull-right"><i class="fa fa-map-marker"></i></a>
-        </div>
+
+
+<div class="row secondarybar">
+    <a  href ng-click="back(site.id)"  class="col-xs-2"> <i class="fa fa-chevron-left"></i> </a>
+    <div class="col-xs-8">
+        <select ng-model="mySector" ng-options="sector.id for sector in sectors">
+            <option value="">-- choose sector --</option>
+        </select>
     </div>
-</nav>
-
-
+    <a href="map.html" class="col-xs-2 pull-right switch"> <i class="fa fa-map-marker"></i> </a>
+</div>
 
 <br> <br>
 <button type="button" class="btn btn-default" ng-bind-html="current.name"></button>
