--- a/platforms/ios/www/partials/site/sector.html
+++ b/platforms/ios/www/partials/site/sector.html
@@ -7,7 +7,7 @@
             <option value="">-- choose sector --</option>
         </select>
     </div>
-    <a href="map.html" class="col-xs-2 pull-right switch"> <i class="fa fa-map-marker"></i> </a>
+    <a href ng-click="maping(site.id, current.id)" class="col-xs-2 pull-right switch"> <i class="fa fa-map-marker"></i> </a>
 </div>
 
 <br> <br>
