--- a/www/partials/about.html
+++ b/www/partials/about.html
@@ -1,4 +1,4 @@
 <h1>{{title}} <br>
 <small> Bonoway version beta</small></h1>
 
-<p>Bienvenu sur la version beta de bonoway. C'est la première pierre ;-) d'un projet ambitieux qui vise à mettre entre les mains caleuses des grimpeurs un outil de partage d'information sur leur milieu.'</p>
+<p>Bienvenu sur la version beta du projet bonoway. Bonoway est un projet pour le moins ambitieux, qui en apportant une plateforme de partage efficace vise à rassembler tous le plus de topos possible, pour les mettre à la disposition du plus grand nombre gratuitement. </p>
