--- a/www/css/bonoway.css
+++ b/www/css/bonoway.css
@@ -175,8 +175,14 @@ a:hover {
     width: 100%;
     height: 100%;
 }
+/* _________________________________________________________ */
 
 
+
+/* SEARCH TYPE ITEMS */
+.activated {
+    color: #007aff; /* (blue) color: #ffffff; */
+}
 
 /* ----------------------------------------------------------------------------- */
 /* ----------------------------------------------------------------------------- */
