--- a/www/partials/search.html
+++ b/www/partials/search.html
@@ -3,37 +3,42 @@
 <div class="row" align="center">
     <div class="col-xs-10 col-xs-offset-1">
         <div class="input-group">
-            <input type="text" class="form-control" ng-model="searchInput">
+            <input type="text" class="form-control" ng-model="searchInput.name">
                 <span class="input-group-btn">
                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                 </span>
                 </div><!-- /input-group -->
     </div><!-- /.col-lg-6 -->
 </div><!-- /.row -->
-<br>
+
+<h4>
 <div class="row" align="center">
-    <div class="col-xs-2 col-xs-offset-3"> Tout </div>
-    <div class="col-xs-2"> Sites </div>
-    <div class="col-xs-2"> Blocs </div>
+    <div class="col-xs-2 col-xs-offset-2" ng-class="{ activated: activeType == 'all'}" ng-click="setSearchType('all')"> Tout </div>
+    <div class="col-xs-3" ng-class="{ activated: activeType == 'sites'}" ng-click="setSearchType('sites')"> Sites </div>
+    <div class="col-xs-3" ng-class="{ activated: activeType == 'lines'}" ng-click="setSearchType('lines')"> Blocs </div>
 </div>
-
+</h4>
 <br>
 
-<div class="row"><h3><div class="col-xs-5"> Sites </div></h3></div>
 
-<div class="row" ng-repeat="site in sites | filter:searchInput">
-    <h4>
-        <div class="col-xs-5" ng-bind-html="site.name"> </div>
-        <div class="col-xs-5" ng-bind-html="site.type"> </div>
-    </h4>
+<div class="row tile" ng-repeat="site in sites | filter:searchInput" ng-hide="activeType == 'lines'" ng-show="activeType == 'sites' || activeType == 'all'" ng-click="detailSite(site.id)">
+    <img class="couvlist"   ng-src="img/{{site.couv}}">  </img>
+    <div class="col-xs-8">
+        <h4>{{site.name}} <span class="badge">{{site.volume}}</span> </h4> <br>
+        <p> {{site.tag}} </p>
+    </div>
+    <div class="col-xs-4" id="row2">
+    </div>
 </div>
 
 
-<div class="row"><h3><div class="col-xs-5"> Blocs </div></h3></div>
 
-<div class="row" ng-repeat="line in lines | filter:searchInput">
+<div class="row" ng-repeat="line in lines | filter:searchInput" ng-hide="activeType == 'sites'" ng-show="activeType == 'lines' || activeType == 'all'" ng-click="detailLine(line.id)">
     <h4>
-        <div class="col-xs-5" ng-bind-html="line.name"> </div>
-        <div class="col-xs-5" ng-bind-html="line.type"> </div>
+        <div class="col-xs-6" ng-bind-html="line.name"> </div>
+        <div class="col-xs-2" ng-bind-html="line.grade"> </div>
     </h4>
+    <h5>
+        <div class="col-xs-4" id="row1"> @ {{line.sitename}}
+        </div>
 </div>
