after fixing session

--- a/platforms/ios/www/partials/site/detail.html
+++ b/platforms/ios/www/partials/site/detail.html
@@ -15,7 +15,7 @@
 
 <h2>Secteurs : </h2>
 
-<div class="row" ng-click="lineList(site.id,'all')">
+<div class="row" ng-click="lineList(site.id,0)">
     <h4>
         <div class="col-xs-12"> Toutes les voies </div>
     </h4>
