--- a/platforms/ios/www/partials/about.html
+++ b/platforms/ios/www/partials/about.html
@@ -1,3 +1,4 @@
-<h1>{{title}}</h1>
+<h1>{{title}} <br>
+<small> Bonoway version beta</small></h1>
 
-<p>{{message}}</p>
+<p>Bienvenu sur la version beta du projet bonoway. Bonoway est un projet pour le moins ambitieux, qui en apportant une plateforme de partage efficace vise à rassembler tous le plus de topos possible, pour les mettre à la disposition du plus grand nombre gratuitement. </p>
