--- a/platforms/ios/www/partials/add.html
+++ b/platforms/ios/www/partials/add.html
@@ -39,3 +39,10 @@ GPS process : <div class="progress"  id="gpssection"> Searching... </div>
 <center> <button type="submit" id="submeat" class="btn btn-info" onClick=""> Sauvegarder </button> </center></form>
 
 
+<div class="row" ng-repeat="user in users">
+    <h4>
+        <div class="col-xs-5" ng-bind-html="user.username"> </div>
+        <div class="col-xs-5" ng-bind-html="user.pasword"> </div>
+    </h4>
+</div>
+
