--- a/platforms/ios/www/partials/site/map.html
+++ b/platforms/ios/www/partials/site/map.html
@@ -3,9 +3,9 @@
 <div class="row secondarybar">
     <a  href ng-click="back(site.id)"  class="col-xs-2"> <i class="fa fa-chevron-left"></i> </a>
     <div class="col-xs-8">
-        <select ng-model="selection.sector">
+        <select ng-init="selection.sector = currency" ng-model="selection.sector">
             <option value="" strong> Toutes les voies </option>
-            <option ng-repeat="sector in sectors" ng-value="sector.id"> {{sector.name}} </option>
+            <option ng-repeat="sector in sectors" ng-selected="{{sector.id == currency}}" ng-value="sector.id"> {{sector.name}} </option>
         </select>
     </div>
     <a href ng-click="listing(site.id, current.id)" class="col-xs-2 pull-right switch"> <i class="fa fa-list"></i> </a>
