--- a/platforms/ios/www/partials/site/sector.html
+++ b/platforms/ios/www/partials/site/sector.html
@@ -3,19 +3,15 @@
 <div class="row secondarybar">
     <a  href ng-click="back(site.id)"  class="col-xs-2"> <i class="fa fa-chevron-left"></i> </a>
     <div class="col-xs-8">
-        <select ng-model="selection.sector">
+        <select ng-init="selection.sector = currency" ng-model="selection.sector">
             <option value="" strong> Toutes les voies </option>
-            <option ng-repeat="sector in sectors" ng-value="sector.id"> {{sector.name}} </option>
+            <option ng-repeat="sector in sectors" ng-selected="{{sector.id == currency}}" ng-value="sector.id"> {{sector.name}} </option>
         </select>
     </div>
     <a href ng-click="maping(site.id, current.id)" class="col-xs-2 pull-right switch"> <i class="fa fa-map-marker"></i> </a>
 </div>
 
-<br> <br>
-<button type="button" class="btn btn-default" ng-bind-html="current.name"></button>
-<button type="button" class="btn btn-default" ng-bind-html="currency"></button>
-<input type="text" class="form-control" ng-model="search.sector">
-
+<br>
 
     <div class="row" ng-repeat="line in lines | filter:selection:strict" ng-click="detail(line.id)">
         <h4>
